--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
-import "../styles/global.css";
+import "@/styles/globals.css";
 
-import Navigation from "../components/navigation.astro";
+import Navigation from "@/components/navigation.astro";
 
 const pageTitle = "About";
 const identity = {
