--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,37 +5,46 @@ import Navigation from "@/components/navigation.astro";
 
 const pageTitle = "About";
 const identity = {
-	name: "Boonyarit Iamsa-ard",
-	location: "Bangkok, Thailand",
-	email: "boonyarit.iamsaard@gmail.com",
-	github: "https://github.com/boonyarit-iamsaard",
-	linkedin: "https://www.linkedin.com/in/boonyarit-iamsaard",
-	skills: ["JavaScript", "TypeScript", "React", "Next.js", "Node.js", "Docker", "SQL", "NoSQL"],
+  name: "Boonyarit Iamsa-ard",
+  location: "Bangkok, Thailand",
+  email: "boonyarit.iamsaard@gmail.com",
+  github: "https://github.com/boonyarit-iamsaard",
+  linkedin: "https://www.linkedin.com/in/boonyarit-iamsaard",
+  skills: [
+    "JavaScript",
+    "TypeScript",
+    "React",
+    "Next.js",
+    "Node.js",
+    "Docker",
+    "SQL",
+    "NoSQL",
+  ],
 };
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Navigation />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
+    <Navigation />
 
-		<h1>{pageTitle}</h1>
+    <h1>{pageTitle}</h1>
 
-		<p>
-			Hi 👋 I&apos;m {identity.name}, a developer. I&apos;m a
-			developer with a passion for building web applications.
-		</p>
+    <p>
+      Hi 👋 I&apos;m {identity.name}, a developer. I&apos;m a developer with a
+      passion for building web applications.
+    </p>
 
-		<h2>Skills</h2>
+    <h2>Skills</h2>
 
-		<ul>
-			{identity.skills.map((skill) => <li>{skill}</li>)}
-		</ul>
-	</body>
+    <ul>
+      {identity.skills.map((skill) => <li>{skill}</li>)}
+    </ul>
+  </body>
 </html>
